src-tauri/crates/agent-core/src/tests/snapshots/app_lib__agent_core__core__turn_executor__tests__assistant_text_only.snap
---
source: src/agent_core/tests/processor_tests.rs
assertion_line: 128
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: Hello
role: assistant
