src-tauri/crates/agent-core/src/tests/snapshots/app_lib__agent_core__core__turn_executor__tests__assistant_with_reasoning.snap
---
source: src/agent_core/tests/processor_tests.rs
assertion_line: 150
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: ok
reasoning_content: thinking...
role: assistant
