src-tauri/crates/agent-core/src/tests/snapshots/app_lib__agent_core__core__turn_executor__tests__assistant_with_tool_calls.snap
---
source: src/agent_core/tests/processor_tests.rs
assertion_line: 143
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: ~
role: assistant
tool_calls:
  - function:
      name: edit_file
    id: tc1
    type: function
