src-tauri/crates/agent-core/src/tests/snapshots/app_lib__agent_core__core__turn_executor__tests__tool_result_format.snap
---
source: src/agent_core/tests/processor_tests.rs
expression: "messages[0]"
---
content: file contents here
name: read_file
role: tool
tool_call_id: tc-1
